# LibreHardwareMonitorAfterburnerPlugin

./: .gitignore  AboutDialog.Designer.cs  AboutDialog.cs  AboutDialog.resx  DllExport.targets  DllExportPatcher.csproj  Exports.cs  HardwareUpdateVisitor.cs  LibreHardwareMonitorAfterburnerPlugin.csproj  LibreHardwareMonitorAfterburnerPlugin.sln  MonitoringSourceDesc.cs  README.md  SensorSource.cs  Settings.cs  SetupDialog.Designer.cs  SetupDialog.cs  SetupDialog.resx  app.config  compress_deps.targets  packages.config
.github/workflows/: ci.yml  release.yml
Debugger/: CMakeLists.txt  Debugger.cpp  Readme.md
Plugin/: Exports.cs  HardwareFlags.cs  HardwareUpdateVisitor.cs  MonitoringSourceDesc.cs  SensorFlags.cs  SensorSource.cs  Settings.cs  SetupDialog.Designer.cs  SetupDialog.cs
Properties/: AssemblyInfo.cs  Settings.Designer.cs  Settings.settings  launchSettings.json
Properties/DataSources/: HardwareFlags.datasource  SensorFlags.datasource
